@@ -1,0 +1,14 @@
+data:extend(
+  {
+    {
+      type = "sprite",
+      name = "qrcode-icon",
+      filename = "__tvc_qrcode__/graphics/icon/qrcode.png",
+      priority = "extra-high-no-scale",
+      size = 128,
+      scale = 0.25,
+      mipmap_count = 1,
+      flags = {"gui-icon"}
+    }
+  }
+)
